proj1/testing/error/repeatRotors.inp
* B Beta I II I (AAAA)
HELLO WORLD